@startuml
!theme plain
skinparam style strictuml

class Player {
  username
  password
  credits
  balance
}

class PlayerAnswer {
answer
}

class Quiz {
  title
  purchase_amount
  times_played
  / amount_correct_questions
}

class Question {
  title
  isActive
  receiving_letter
}


class Timer {

}


class MultipleChoiceQuestion {
}


class OpenQuestion {
}



Class Answer {

}

Player "1" -- "0..*" PlayerAnswer :> gives
PlayerAnswer "0..*" -- "1" Question : belongs to >
Player "1" -- "0..*" Quiz : plays with >
Quiz "1*" -- "8" Question : consists of >
Quiz "1" -- "1" Timer : tracked with >
Question <|-- MultipleChoiceQuestion
Question <|-- OpenQuestion
MultipleChoiceQuestion "1" -- "3" Answer : other answers >
MultipleChoiceQuestion "1" -- "1" Answer : correct answer >
OpenQuestion "1" -- "1..*" Answer : correct answer(s) >

@enduml